--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@pokt-network/pocket-js": "0.5.4-rc",
+    "@pokt-network/pocket-js": "0.5.7-rc",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -130,7 +130,7 @@
     "node-sass": "^4.13.1"
   },
   "scripts": {
-    "start": "PORT=80 BROWSER=none node_modules/.bin/react-scripts start",
+    "start": "PORT=80 BROWSER=none node_modules/.bin/react-scripts --max_old_space_size=8192 start",
     "build": "node_modules/.bin/react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=4096 node_modules/.bin/react-scripts build --prod",
     "test": "node_modules/.bin/react-scripts test",
